APIs/netboxdemo.com/2.8/javascript-client/README.md
# net_box_api

NetBoxApi - JavaScript client for net_box_api
API to access NetBox
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.8
- Package version: 2.8
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install net_box_api --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your net_box_api from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var NetBoxApi = require('net_box_api');

var defaultClient = NetBoxApi.ApiClient.instance;
// Configure API key authorization: Bearer
var Bearer = defaultClient.authentications['Bearer'];
Bearer.apiKey = "YOUR API KEY"
// Uncomment the following line to set a prefix for the API key, e.g. "Token" (defaults to null)
//Bearer.apiKeyPrefix['Authorization'] = "Token"

var api = new NetBoxApi.CircuitsApi()
var writableCircuitTermination = new NetBoxApi.WritableCircuitTermination(); // {WritableCircuitTermination} 
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.circuitsCircuitTerminationsCreate(writableCircuitTermination, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://netboxdemo.com/api*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*NetBoxApi.CircuitsApi* | [**circuitsCircuitTerminationsCreate**](docs/CircuitsApi.md#circuitsCircuitTerminationsCreate) | **POST** /circuits/circuit-terminations/ | 
*NetBoxApi.CircuitsApi* | [**circuitsCircuitTerminationsDelete**](docs/CircuitsApi.md#circuitsCircuitTerminationsDelete) | **DELETE** /circuits/circuit-terminations/{id}/ | 
*NetBoxApi.CircuitsApi* | [**circuitsCircuitTerminationsList**](docs/CircuitsApi.md#circuitsCircuitTerminationsList) | **GET** /circuits/circuit-terminations/ | 
*NetBoxApi.CircuitsApi* | [**circuitsCircuitTerminationsPartialUpdate**](docs/CircuitsApi.md#circuitsCircuitTerminationsPartialUpdate) | **PATCH** /circuits/circuit-terminations/{id}/ | 
*NetBoxApi.CircuitsApi* | [**circuitsCircuitTerminationsRead**](docs/CircuitsApi.md#circuitsCircuitTerminationsRead) | **GET** /circuits/circuit-terminations/{id}/ | 
*NetBoxApi.CircuitsApi* | [**circuitsCircuitTerminationsUpdate**](docs/CircuitsApi.md#circuitsCircuitTerminationsUpdate) | **PUT** /circuits/circuit-terminations/{id}/ | 
*NetBoxApi.CircuitsApi* | [**circuitsCircuitTypesCreate**](docs/CircuitsApi.md#circuitsCircuitTypesCreate) | **POST** /circuits/circuit-types/ | 
*NetBoxApi.CircuitsApi* | [**circuitsCircuitTypesDelete**](docs/CircuitsApi.md#circuitsCircuitTypesDelete) | **DELETE** /circuits/circuit-types/{id}/ | 
*NetBoxApi.CircuitsApi* | [**circuitsCircuitTypesList**](docs/CircuitsApi.md#circuitsCircuitTypesList) | **GET** /circuits/circuit-types/ | 
*NetBoxApi.CircuitsApi* | [**circuitsCircuitTypesPartialUpdate**](docs/CircuitsApi.md#circuitsCircuitTypesPartialUpdate) | **PATCH** /circuits/circuit-types/{id}/ | 
*NetBoxApi.CircuitsApi* | [**circuitsCircuitTypesRead**](docs/CircuitsApi.md#circuitsCircuitTypesRead) | **GET** /circuits/circuit-types/{id}/ | 
*NetBoxApi.CircuitsApi* | [**circuitsCircuitTypesUpdate**](docs/CircuitsApi.md#circuitsCircuitTypesUpdate) | **PUT** /circuits/circuit-types/{id}/ | 
*NetBoxApi.CircuitsApi* | [**circuitsCircuitsCreate**](docs/CircuitsApi.md#circuitsCircuitsCreate) | **POST** /circuits/circuits/ | 
*NetBoxApi.CircuitsApi* | [**circuitsCircuitsDelete**](docs/CircuitsApi.md#circuitsCircuitsDelete) | **DELETE** /circuits/circuits/{id}/ | 
*NetBoxApi.CircuitsApi* | [**circuitsCircuitsList**](docs/CircuitsApi.md#circuitsCircuitsList) | **GET** /circuits/circuits/ | 
*NetBoxApi.CircuitsApi* | [**circuitsCircuitsPartialUpdate**](docs/CircuitsApi.md#circuitsCircuitsPartialUpdate) | **PATCH** /circuits/circuits/{id}/ | 
*NetBoxApi.CircuitsApi* | [**circuitsCircuitsRead**](docs/CircuitsApi.md#circuitsCircuitsRead) | **GET** /circuits/circuits/{id}/ | 
*NetBoxApi.CircuitsApi* | [**circuitsCircuitsUpdate**](docs/CircuitsApi.md#circuitsCircuitsUpdate) | **PUT** /circuits/circuits/{id}/ | 
*NetBoxApi.CircuitsApi* | [**circuitsProvidersCreate**](docs/CircuitsApi.md#circuitsProvidersCreate) | **POST** /circuits/providers/ | 
*NetBoxApi.CircuitsApi* | [**circuitsProvidersDelete**](docs/CircuitsApi.md#circuitsProvidersDelete) | **DELETE** /circuits/providers/{id}/ | 
*NetBoxApi.CircuitsApi* | [**circuitsProvidersGraphs**](docs/CircuitsApi.md#circuitsProvidersGraphs) | **GET** /circuits/providers/{id}/graphs/ | 
*NetBoxApi.CircuitsApi* | [**circuitsProvidersList**](docs/CircuitsApi.md#circuitsProvidersList) | **GET** /circuits/providers/ | 
*NetBoxApi.CircuitsApi* | [**circuitsProvidersPartialUpdate**](docs/CircuitsApi.md#circuitsProvidersPartialUpdate) | **PATCH** /circuits/providers/{id}/ | 
*NetBoxApi.CircuitsApi* | [**circuitsProvidersRead**](docs/CircuitsApi.md#circuitsProvidersRead) | **GET** /circuits/providers/{id}/ | 
*NetBoxApi.CircuitsApi* | [**circuitsProvidersUpdate**](docs/CircuitsApi.md#circuitsProvidersUpdate) | **PUT** /circuits/providers/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimCablesCreate**](docs/DcimApi.md#dcimCablesCreate) | **POST** /dcim/cables/ | 
*NetBoxApi.DcimApi* | [**dcimCablesDelete**](docs/DcimApi.md#dcimCablesDelete) | **DELETE** /dcim/cables/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimCablesList**](docs/DcimApi.md#dcimCablesList) | **GET** /dcim/cables/ | 
*NetBoxApi.DcimApi* | [**dcimCablesPartialUpdate**](docs/DcimApi.md#dcimCablesPartialUpdate) | **PATCH** /dcim/cables/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimCablesRead**](docs/DcimApi.md#dcimCablesRead) | **GET** /dcim/cables/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimCablesUpdate**](docs/DcimApi.md#dcimCablesUpdate) | **PUT** /dcim/cables/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimConnectedDeviceList**](docs/DcimApi.md#dcimConnectedDeviceList) | **GET** /dcim/connected-device/ | 
*NetBoxApi.DcimApi* | [**dcimConsoleConnectionsList**](docs/DcimApi.md#dcimConsoleConnectionsList) | **GET** /dcim/console-connections/ | 
*NetBoxApi.DcimApi* | [**dcimConsolePortTemplatesCreate**](docs/DcimApi.md#dcimConsolePortTemplatesCreate) | **POST** /dcim/console-port-templates/ | 
*NetBoxApi.DcimApi* | [**dcimConsolePortTemplatesDelete**](docs/DcimApi.md#dcimConsolePortTemplatesDelete) | **DELETE** /dcim/console-port-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimConsolePortTemplatesList**](docs/DcimApi.md#dcimConsolePortTemplatesList) | **GET** /dcim/console-port-templates/ | 
*NetBoxApi.DcimApi* | [**dcimConsolePortTemplatesPartialUpdate**](docs/DcimApi.md#dcimConsolePortTemplatesPartialUpdate) | **PATCH** /dcim/console-port-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimConsolePortTemplatesRead**](docs/DcimApi.md#dcimConsolePortTemplatesRead) | **GET** /dcim/console-port-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimConsolePortTemplatesUpdate**](docs/DcimApi.md#dcimConsolePortTemplatesUpdate) | **PUT** /dcim/console-port-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimConsolePortsCreate**](docs/DcimApi.md#dcimConsolePortsCreate) | **POST** /dcim/console-ports/ | 
*NetBoxApi.DcimApi* | [**dcimConsolePortsDelete**](docs/DcimApi.md#dcimConsolePortsDelete) | **DELETE** /dcim/console-ports/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimConsolePortsList**](docs/DcimApi.md#dcimConsolePortsList) | **GET** /dcim/console-ports/ | 
*NetBoxApi.DcimApi* | [**dcimConsolePortsPartialUpdate**](docs/DcimApi.md#dcimConsolePortsPartialUpdate) | **PATCH** /dcim/console-ports/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimConsolePortsRead**](docs/DcimApi.md#dcimConsolePortsRead) | **GET** /dcim/console-ports/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimConsolePortsTrace**](docs/DcimApi.md#dcimConsolePortsTrace) | **GET** /dcim/console-ports/{id}/trace/ | 
*NetBoxApi.DcimApi* | [**dcimConsolePortsUpdate**](docs/DcimApi.md#dcimConsolePortsUpdate) | **PUT** /dcim/console-ports/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimConsoleServerPortTemplatesCreate**](docs/DcimApi.md#dcimConsoleServerPortTemplatesCreate) | **POST** /dcim/console-server-port-templates/ | 
*NetBoxApi.DcimApi* | [**dcimConsoleServerPortTemplatesDelete**](docs/DcimApi.md#dcimConsoleServerPortTemplatesDelete) | **DELETE** /dcim/console-server-port-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimConsoleServerPortTemplatesList**](docs/DcimApi.md#dcimConsoleServerPortTemplatesList) | **GET** /dcim/console-server-port-templates/ | 
*NetBoxApi.DcimApi* | [**dcimConsoleServerPortTemplatesPartialUpdate**](docs/DcimApi.md#dcimConsoleServerPortTemplatesPartialUpdate) | **PATCH** /dcim/console-server-port-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimConsoleServerPortTemplatesRead**](docs/DcimApi.md#dcimConsoleServerPortTemplatesRead) | **GET** /dcim/console-server-port-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimConsoleServerPortTemplatesUpdate**](docs/DcimApi.md#dcimConsoleServerPortTemplatesUpdate) | **PUT** /dcim/console-server-port-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimConsoleServerPortsCreate**](docs/DcimApi.md#dcimConsoleServerPortsCreate) | **POST** /dcim/console-server-ports/ | 
*NetBoxApi.DcimApi* | [**dcimConsoleServerPortsDelete**](docs/DcimApi.md#dcimConsoleServerPortsDelete) | **DELETE** /dcim/console-server-ports/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimConsoleServerPortsList**](docs/DcimApi.md#dcimConsoleServerPortsList) | **GET** /dcim/console-server-ports/ | 
*NetBoxApi.DcimApi* | [**dcimConsoleServerPortsPartialUpdate**](docs/DcimApi.md#dcimConsoleServerPortsPartialUpdate) | **PATCH** /dcim/console-server-ports/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimConsoleServerPortsRead**](docs/DcimApi.md#dcimConsoleServerPortsRead) | **GET** /dcim/console-server-ports/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimConsoleServerPortsTrace**](docs/DcimApi.md#dcimConsoleServerPortsTrace) | **GET** /dcim/console-server-ports/{id}/trace/ | 
*NetBoxApi.DcimApi* | [**dcimConsoleServerPortsUpdate**](docs/DcimApi.md#dcimConsoleServerPortsUpdate) | **PUT** /dcim/console-server-ports/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceBayTemplatesCreate**](docs/DcimApi.md#dcimDeviceBayTemplatesCreate) | **POST** /dcim/device-bay-templates/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceBayTemplatesDelete**](docs/DcimApi.md#dcimDeviceBayTemplatesDelete) | **DELETE** /dcim/device-bay-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceBayTemplatesList**](docs/DcimApi.md#dcimDeviceBayTemplatesList) | **GET** /dcim/device-bay-templates/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceBayTemplatesPartialUpdate**](docs/DcimApi.md#dcimDeviceBayTemplatesPartialUpdate) | **PATCH** /dcim/device-bay-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceBayTemplatesRead**](docs/DcimApi.md#dcimDeviceBayTemplatesRead) | **GET** /dcim/device-bay-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceBayTemplatesUpdate**](docs/DcimApi.md#dcimDeviceBayTemplatesUpdate) | **PUT** /dcim/device-bay-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceBaysCreate**](docs/DcimApi.md#dcimDeviceBaysCreate) | **POST** /dcim/device-bays/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceBaysDelete**](docs/DcimApi.md#dcimDeviceBaysDelete) | **DELETE** /dcim/device-bays/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceBaysList**](docs/DcimApi.md#dcimDeviceBaysList) | **GET** /dcim/device-bays/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceBaysPartialUpdate**](docs/DcimApi.md#dcimDeviceBaysPartialUpdate) | **PATCH** /dcim/device-bays/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceBaysRead**](docs/DcimApi.md#dcimDeviceBaysRead) | **GET** /dcim/device-bays/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceBaysUpdate**](docs/DcimApi.md#dcimDeviceBaysUpdate) | **PUT** /dcim/device-bays/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceRolesCreate**](docs/DcimApi.md#dcimDeviceRolesCreate) | **POST** /dcim/device-roles/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceRolesDelete**](docs/DcimApi.md#dcimDeviceRolesDelete) | **DELETE** /dcim/device-roles/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceRolesList**](docs/DcimApi.md#dcimDeviceRolesList) | **GET** /dcim/device-roles/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceRolesPartialUpdate**](docs/DcimApi.md#dcimDeviceRolesPartialUpdate) | **PATCH** /dcim/device-roles/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceRolesRead**](docs/DcimApi.md#dcimDeviceRolesRead) | **GET** /dcim/device-roles/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceRolesUpdate**](docs/DcimApi.md#dcimDeviceRolesUpdate) | **PUT** /dcim/device-roles/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceTypesCreate**](docs/DcimApi.md#dcimDeviceTypesCreate) | **POST** /dcim/device-types/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceTypesDelete**](docs/DcimApi.md#dcimDeviceTypesDelete) | **DELETE** /dcim/device-types/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceTypesList**](docs/DcimApi.md#dcimDeviceTypesList) | **GET** /dcim/device-types/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceTypesPartialUpdate**](docs/DcimApi.md#dcimDeviceTypesPartialUpdate) | **PATCH** /dcim/device-types/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceTypesRead**](docs/DcimApi.md#dcimDeviceTypesRead) | **GET** /dcim/device-types/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimDeviceTypesUpdate**](docs/DcimApi.md#dcimDeviceTypesUpdate) | **PUT** /dcim/device-types/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimDevicesCreate**](docs/DcimApi.md#dcimDevicesCreate) | **POST** /dcim/devices/ | 
*NetBoxApi.DcimApi* | [**dcimDevicesDelete**](docs/DcimApi.md#dcimDevicesDelete) | **DELETE** /dcim/devices/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimDevicesGraphs**](docs/DcimApi.md#dcimDevicesGraphs) | **GET** /dcim/devices/{id}/graphs/ | 
*NetBoxApi.DcimApi* | [**dcimDevicesList**](docs/DcimApi.md#dcimDevicesList) | **GET** /dcim/devices/ | 
*NetBoxApi.DcimApi* | [**dcimDevicesNapalm**](docs/DcimApi.md#dcimDevicesNapalm) | **GET** /dcim/devices/{id}/napalm/ | 
*NetBoxApi.DcimApi* | [**dcimDevicesPartialUpdate**](docs/DcimApi.md#dcimDevicesPartialUpdate) | **PATCH** /dcim/devices/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimDevicesRead**](docs/DcimApi.md#dcimDevicesRead) | **GET** /dcim/devices/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimDevicesUpdate**](docs/DcimApi.md#dcimDevicesUpdate) | **PUT** /dcim/devices/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimFrontPortTemplatesCreate**](docs/DcimApi.md#dcimFrontPortTemplatesCreate) | **POST** /dcim/front-port-templates/ | 
*NetBoxApi.DcimApi* | [**dcimFrontPortTemplatesDelete**](docs/DcimApi.md#dcimFrontPortTemplatesDelete) | **DELETE** /dcim/front-port-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimFrontPortTemplatesList**](docs/DcimApi.md#dcimFrontPortTemplatesList) | **GET** /dcim/front-port-templates/ | 
*NetBoxApi.DcimApi* | [**dcimFrontPortTemplatesPartialUpdate**](docs/DcimApi.md#dcimFrontPortTemplatesPartialUpdate) | **PATCH** /dcim/front-port-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimFrontPortTemplatesRead**](docs/DcimApi.md#dcimFrontPortTemplatesRead) | **GET** /dcim/front-port-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimFrontPortTemplatesUpdate**](docs/DcimApi.md#dcimFrontPortTemplatesUpdate) | **PUT** /dcim/front-port-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimFrontPortsCreate**](docs/DcimApi.md#dcimFrontPortsCreate) | **POST** /dcim/front-ports/ | 
*NetBoxApi.DcimApi* | [**dcimFrontPortsDelete**](docs/DcimApi.md#dcimFrontPortsDelete) | **DELETE** /dcim/front-ports/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimFrontPortsList**](docs/DcimApi.md#dcimFrontPortsList) | **GET** /dcim/front-ports/ | 
*NetBoxApi.DcimApi* | [**dcimFrontPortsPartialUpdate**](docs/DcimApi.md#dcimFrontPortsPartialUpdate) | **PATCH** /dcim/front-ports/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimFrontPortsRead**](docs/DcimApi.md#dcimFrontPortsRead) | **GET** /dcim/front-ports/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimFrontPortsTrace**](docs/DcimApi.md#dcimFrontPortsTrace) | **GET** /dcim/front-ports/{id}/trace/ | 
*NetBoxApi.DcimApi* | [**dcimFrontPortsUpdate**](docs/DcimApi.md#dcimFrontPortsUpdate) | **PUT** /dcim/front-ports/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimInterfaceConnectionsList**](docs/DcimApi.md#dcimInterfaceConnectionsList) | **GET** /dcim/interface-connections/ | 
*NetBoxApi.DcimApi* | [**dcimInterfaceTemplatesCreate**](docs/DcimApi.md#dcimInterfaceTemplatesCreate) | **POST** /dcim/interface-templates/ | 
*NetBoxApi.DcimApi* | [**dcimInterfaceTemplatesDelete**](docs/DcimApi.md#dcimInterfaceTemplatesDelete) | **DELETE** /dcim/interface-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimInterfaceTemplatesList**](docs/DcimApi.md#dcimInterfaceTemplatesList) | **GET** /dcim/interface-templates/ | 
*NetBoxApi.DcimApi* | [**dcimInterfaceTemplatesPartialUpdate**](docs/DcimApi.md#dcimInterfaceTemplatesPartialUpdate) | **PATCH** /dcim/interface-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimInterfaceTemplatesRead**](docs/DcimApi.md#dcimInterfaceTemplatesRead) | **GET** /dcim/interface-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimInterfaceTemplatesUpdate**](docs/DcimApi.md#dcimInterfaceTemplatesUpdate) | **PUT** /dcim/interface-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimInterfacesCreate**](docs/DcimApi.md#dcimInterfacesCreate) | **POST** /dcim/interfaces/ | 
*NetBoxApi.DcimApi* | [**dcimInterfacesDelete**](docs/DcimApi.md#dcimInterfacesDelete) | **DELETE** /dcim/interfaces/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimInterfacesGraphs**](docs/DcimApi.md#dcimInterfacesGraphs) | **GET** /dcim/interfaces/{id}/graphs/ | 
*NetBoxApi.DcimApi* | [**dcimInterfacesList**](docs/DcimApi.md#dcimInterfacesList) | **GET** /dcim/interfaces/ | 
*NetBoxApi.DcimApi* | [**dcimInterfacesPartialUpdate**](docs/DcimApi.md#dcimInterfacesPartialUpdate) | **PATCH** /dcim/interfaces/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimInterfacesRead**](docs/DcimApi.md#dcimInterfacesRead) | **GET** /dcim/interfaces/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimInterfacesTrace**](docs/DcimApi.md#dcimInterfacesTrace) | **GET** /dcim/interfaces/{id}/trace/ | 
*NetBoxApi.DcimApi* | [**dcimInterfacesUpdate**](docs/DcimApi.md#dcimInterfacesUpdate) | **PUT** /dcim/interfaces/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimInventoryItemsCreate**](docs/DcimApi.md#dcimInventoryItemsCreate) | **POST** /dcim/inventory-items/ | 
*NetBoxApi.DcimApi* | [**dcimInventoryItemsDelete**](docs/DcimApi.md#dcimInventoryItemsDelete) | **DELETE** /dcim/inventory-items/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimInventoryItemsList**](docs/DcimApi.md#dcimInventoryItemsList) | **GET** /dcim/inventory-items/ | 
*NetBoxApi.DcimApi* | [**dcimInventoryItemsPartialUpdate**](docs/DcimApi.md#dcimInventoryItemsPartialUpdate) | **PATCH** /dcim/inventory-items/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimInventoryItemsRead**](docs/DcimApi.md#dcimInventoryItemsRead) | **GET** /dcim/inventory-items/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimInventoryItemsUpdate**](docs/DcimApi.md#dcimInventoryItemsUpdate) | **PUT** /dcim/inventory-items/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimManufacturersCreate**](docs/DcimApi.md#dcimManufacturersCreate) | **POST** /dcim/manufacturers/ | 
*NetBoxApi.DcimApi* | [**dcimManufacturersDelete**](docs/DcimApi.md#dcimManufacturersDelete) | **DELETE** /dcim/manufacturers/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimManufacturersList**](docs/DcimApi.md#dcimManufacturersList) | **GET** /dcim/manufacturers/ | 
*NetBoxApi.DcimApi* | [**dcimManufacturersPartialUpdate**](docs/DcimApi.md#dcimManufacturersPartialUpdate) | **PATCH** /dcim/manufacturers/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimManufacturersRead**](docs/DcimApi.md#dcimManufacturersRead) | **GET** /dcim/manufacturers/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimManufacturersUpdate**](docs/DcimApi.md#dcimManufacturersUpdate) | **PUT** /dcim/manufacturers/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPlatformsCreate**](docs/DcimApi.md#dcimPlatformsCreate) | **POST** /dcim/platforms/ | 
*NetBoxApi.DcimApi* | [**dcimPlatformsDelete**](docs/DcimApi.md#dcimPlatformsDelete) | **DELETE** /dcim/platforms/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPlatformsList**](docs/DcimApi.md#dcimPlatformsList) | **GET** /dcim/platforms/ | 
*NetBoxApi.DcimApi* | [**dcimPlatformsPartialUpdate**](docs/DcimApi.md#dcimPlatformsPartialUpdate) | **PATCH** /dcim/platforms/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPlatformsRead**](docs/DcimApi.md#dcimPlatformsRead) | **GET** /dcim/platforms/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPlatformsUpdate**](docs/DcimApi.md#dcimPlatformsUpdate) | **PUT** /dcim/platforms/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerConnectionsList**](docs/DcimApi.md#dcimPowerConnectionsList) | **GET** /dcim/power-connections/ | 
*NetBoxApi.DcimApi* | [**dcimPowerFeedsCreate**](docs/DcimApi.md#dcimPowerFeedsCreate) | **POST** /dcim/power-feeds/ | 
*NetBoxApi.DcimApi* | [**dcimPowerFeedsDelete**](docs/DcimApi.md#dcimPowerFeedsDelete) | **DELETE** /dcim/power-feeds/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerFeedsList**](docs/DcimApi.md#dcimPowerFeedsList) | **GET** /dcim/power-feeds/ | 
*NetBoxApi.DcimApi* | [**dcimPowerFeedsPartialUpdate**](docs/DcimApi.md#dcimPowerFeedsPartialUpdate) | **PATCH** /dcim/power-feeds/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerFeedsRead**](docs/DcimApi.md#dcimPowerFeedsRead) | **GET** /dcim/power-feeds/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerFeedsUpdate**](docs/DcimApi.md#dcimPowerFeedsUpdate) | **PUT** /dcim/power-feeds/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerOutletTemplatesCreate**](docs/DcimApi.md#dcimPowerOutletTemplatesCreate) | **POST** /dcim/power-outlet-templates/ | 
*NetBoxApi.DcimApi* | [**dcimPowerOutletTemplatesDelete**](docs/DcimApi.md#dcimPowerOutletTemplatesDelete) | **DELETE** /dcim/power-outlet-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerOutletTemplatesList**](docs/DcimApi.md#dcimPowerOutletTemplatesList) | **GET** /dcim/power-outlet-templates/ | 
*NetBoxApi.DcimApi* | [**dcimPowerOutletTemplatesPartialUpdate**](docs/DcimApi.md#dcimPowerOutletTemplatesPartialUpdate) | **PATCH** /dcim/power-outlet-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerOutletTemplatesRead**](docs/DcimApi.md#dcimPowerOutletTemplatesRead) | **GET** /dcim/power-outlet-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerOutletTemplatesUpdate**](docs/DcimApi.md#dcimPowerOutletTemplatesUpdate) | **PUT** /dcim/power-outlet-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerOutletsCreate**](docs/DcimApi.md#dcimPowerOutletsCreate) | **POST** /dcim/power-outlets/ | 
*NetBoxApi.DcimApi* | [**dcimPowerOutletsDelete**](docs/DcimApi.md#dcimPowerOutletsDelete) | **DELETE** /dcim/power-outlets/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerOutletsList**](docs/DcimApi.md#dcimPowerOutletsList) | **GET** /dcim/power-outlets/ | 
*NetBoxApi.DcimApi* | [**dcimPowerOutletsPartialUpdate**](docs/DcimApi.md#dcimPowerOutletsPartialUpdate) | **PATCH** /dcim/power-outlets/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerOutletsRead**](docs/DcimApi.md#dcimPowerOutletsRead) | **GET** /dcim/power-outlets/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerOutletsTrace**](docs/DcimApi.md#dcimPowerOutletsTrace) | **GET** /dcim/power-outlets/{id}/trace/ | 
*NetBoxApi.DcimApi* | [**dcimPowerOutletsUpdate**](docs/DcimApi.md#dcimPowerOutletsUpdate) | **PUT** /dcim/power-outlets/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerPanelsCreate**](docs/DcimApi.md#dcimPowerPanelsCreate) | **POST** /dcim/power-panels/ | 
*NetBoxApi.DcimApi* | [**dcimPowerPanelsDelete**](docs/DcimApi.md#dcimPowerPanelsDelete) | **DELETE** /dcim/power-panels/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerPanelsList**](docs/DcimApi.md#dcimPowerPanelsList) | **GET** /dcim/power-panels/ | 
*NetBoxApi.DcimApi* | [**dcimPowerPanelsPartialUpdate**](docs/DcimApi.md#dcimPowerPanelsPartialUpdate) | **PATCH** /dcim/power-panels/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerPanelsRead**](docs/DcimApi.md#dcimPowerPanelsRead) | **GET** /dcim/power-panels/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerPanelsUpdate**](docs/DcimApi.md#dcimPowerPanelsUpdate) | **PUT** /dcim/power-panels/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerPortTemplatesCreate**](docs/DcimApi.md#dcimPowerPortTemplatesCreate) | **POST** /dcim/power-port-templates/ | 
*NetBoxApi.DcimApi* | [**dcimPowerPortTemplatesDelete**](docs/DcimApi.md#dcimPowerPortTemplatesDelete) | **DELETE** /dcim/power-port-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerPortTemplatesList**](docs/DcimApi.md#dcimPowerPortTemplatesList) | **GET** /dcim/power-port-templates/ | 
*NetBoxApi.DcimApi* | [**dcimPowerPortTemplatesPartialUpdate**](docs/DcimApi.md#dcimPowerPortTemplatesPartialUpdate) | **PATCH** /dcim/power-port-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerPortTemplatesRead**](docs/DcimApi.md#dcimPowerPortTemplatesRead) | **GET** /dcim/power-port-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerPortTemplatesUpdate**](docs/DcimApi.md#dcimPowerPortTemplatesUpdate) | **PUT** /dcim/power-port-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerPortsCreate**](docs/DcimApi.md#dcimPowerPortsCreate) | **POST** /dcim/power-ports/ | 
*NetBoxApi.DcimApi* | [**dcimPowerPortsDelete**](docs/DcimApi.md#dcimPowerPortsDelete) | **DELETE** /dcim/power-ports/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerPortsList**](docs/DcimApi.md#dcimPowerPortsList) | **GET** /dcim/power-ports/ | 
*NetBoxApi.DcimApi* | [**dcimPowerPortsPartialUpdate**](docs/DcimApi.md#dcimPowerPortsPartialUpdate) | **PATCH** /dcim/power-ports/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerPortsRead**](docs/DcimApi.md#dcimPowerPortsRead) | **GET** /dcim/power-ports/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimPowerPortsTrace**](docs/DcimApi.md#dcimPowerPortsTrace) | **GET** /dcim/power-ports/{id}/trace/ | 
*NetBoxApi.DcimApi* | [**dcimPowerPortsUpdate**](docs/DcimApi.md#dcimPowerPortsUpdate) | **PUT** /dcim/power-ports/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRackGroupsCreate**](docs/DcimApi.md#dcimRackGroupsCreate) | **POST** /dcim/rack-groups/ | 
*NetBoxApi.DcimApi* | [**dcimRackGroupsDelete**](docs/DcimApi.md#dcimRackGroupsDelete) | **DELETE** /dcim/rack-groups/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRackGroupsList**](docs/DcimApi.md#dcimRackGroupsList) | **GET** /dcim/rack-groups/ | 
*NetBoxApi.DcimApi* | [**dcimRackGroupsPartialUpdate**](docs/DcimApi.md#dcimRackGroupsPartialUpdate) | **PATCH** /dcim/rack-groups/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRackGroupsRead**](docs/DcimApi.md#dcimRackGroupsRead) | **GET** /dcim/rack-groups/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRackGroupsUpdate**](docs/DcimApi.md#dcimRackGroupsUpdate) | **PUT** /dcim/rack-groups/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRackReservationsCreate**](docs/DcimApi.md#dcimRackReservationsCreate) | **POST** /dcim/rack-reservations/ | 
*NetBoxApi.DcimApi* | [**dcimRackReservationsDelete**](docs/DcimApi.md#dcimRackReservationsDelete) | **DELETE** /dcim/rack-reservations/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRackReservationsList**](docs/DcimApi.md#dcimRackReservationsList) | **GET** /dcim/rack-reservations/ | 
*NetBoxApi.DcimApi* | [**dcimRackReservationsPartialUpdate**](docs/DcimApi.md#dcimRackReservationsPartialUpdate) | **PATCH** /dcim/rack-reservations/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRackReservationsRead**](docs/DcimApi.md#dcimRackReservationsRead) | **GET** /dcim/rack-reservations/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRackReservationsUpdate**](docs/DcimApi.md#dcimRackReservationsUpdate) | **PUT** /dcim/rack-reservations/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRackRolesCreate**](docs/DcimApi.md#dcimRackRolesCreate) | **POST** /dcim/rack-roles/ | 
*NetBoxApi.DcimApi* | [**dcimRackRolesDelete**](docs/DcimApi.md#dcimRackRolesDelete) | **DELETE** /dcim/rack-roles/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRackRolesList**](docs/DcimApi.md#dcimRackRolesList) | **GET** /dcim/rack-roles/ | 
*NetBoxApi.DcimApi* | [**dcimRackRolesPartialUpdate**](docs/DcimApi.md#dcimRackRolesPartialUpdate) | **PATCH** /dcim/rack-roles/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRackRolesRead**](docs/DcimApi.md#dcimRackRolesRead) | **GET** /dcim/rack-roles/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRackRolesUpdate**](docs/DcimApi.md#dcimRackRolesUpdate) | **PUT** /dcim/rack-roles/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRacksCreate**](docs/DcimApi.md#dcimRacksCreate) | **POST** /dcim/racks/ | 
*NetBoxApi.DcimApi* | [**dcimRacksDelete**](docs/DcimApi.md#dcimRacksDelete) | **DELETE** /dcim/racks/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRacksElevation**](docs/DcimApi.md#dcimRacksElevation) | **GET** /dcim/racks/{id}/elevation/ | 
*NetBoxApi.DcimApi* | [**dcimRacksList**](docs/DcimApi.md#dcimRacksList) | **GET** /dcim/racks/ | 
*NetBoxApi.DcimApi* | [**dcimRacksPartialUpdate**](docs/DcimApi.md#dcimRacksPartialUpdate) | **PATCH** /dcim/racks/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRacksRead**](docs/DcimApi.md#dcimRacksRead) | **GET** /dcim/racks/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRacksUpdate**](docs/DcimApi.md#dcimRacksUpdate) | **PUT** /dcim/racks/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRearPortTemplatesCreate**](docs/DcimApi.md#dcimRearPortTemplatesCreate) | **POST** /dcim/rear-port-templates/ | 
*NetBoxApi.DcimApi* | [**dcimRearPortTemplatesDelete**](docs/DcimApi.md#dcimRearPortTemplatesDelete) | **DELETE** /dcim/rear-port-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRearPortTemplatesList**](docs/DcimApi.md#dcimRearPortTemplatesList) | **GET** /dcim/rear-port-templates/ | 
*NetBoxApi.DcimApi* | [**dcimRearPortTemplatesPartialUpdate**](docs/DcimApi.md#dcimRearPortTemplatesPartialUpdate) | **PATCH** /dcim/rear-port-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRearPortTemplatesRead**](docs/DcimApi.md#dcimRearPortTemplatesRead) | **GET** /dcim/rear-port-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRearPortTemplatesUpdate**](docs/DcimApi.md#dcimRearPortTemplatesUpdate) | **PUT** /dcim/rear-port-templates/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRearPortsCreate**](docs/DcimApi.md#dcimRearPortsCreate) | **POST** /dcim/rear-ports/ | 
*NetBoxApi.DcimApi* | [**dcimRearPortsDelete**](docs/DcimApi.md#dcimRearPortsDelete) | **DELETE** /dcim/rear-ports/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRearPortsList**](docs/DcimApi.md#dcimRearPortsList) | **GET** /dcim/rear-ports/ | 
*NetBoxApi.DcimApi* | [**dcimRearPortsPartialUpdate**](docs/DcimApi.md#dcimRearPortsPartialUpdate) | **PATCH** /dcim/rear-ports/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRearPortsRead**](docs/DcimApi.md#dcimRearPortsRead) | **GET** /dcim/rear-ports/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRearPortsTrace**](docs/DcimApi.md#dcimRearPortsTrace) | **GET** /dcim/rear-ports/{id}/trace/ | 
*NetBoxApi.DcimApi* | [**dcimRearPortsUpdate**](docs/DcimApi.md#dcimRearPortsUpdate) | **PUT** /dcim/rear-ports/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRegionsCreate**](docs/DcimApi.md#dcimRegionsCreate) | **POST** /dcim/regions/ | 
*NetBoxApi.DcimApi* | [**dcimRegionsDelete**](docs/DcimApi.md#dcimRegionsDelete) | **DELETE** /dcim/regions/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRegionsList**](docs/DcimApi.md#dcimRegionsList) | **GET** /dcim/regions/ | 
*NetBoxApi.DcimApi* | [**dcimRegionsPartialUpdate**](docs/DcimApi.md#dcimRegionsPartialUpdate) | **PATCH** /dcim/regions/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRegionsRead**](docs/DcimApi.md#dcimRegionsRead) | **GET** /dcim/regions/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimRegionsUpdate**](docs/DcimApi.md#dcimRegionsUpdate) | **PUT** /dcim/regions/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimSitesCreate**](docs/DcimApi.md#dcimSitesCreate) | **POST** /dcim/sites/ | 
*NetBoxApi.DcimApi* | [**dcimSitesDelete**](docs/DcimApi.md#dcimSitesDelete) | **DELETE** /dcim/sites/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimSitesGraphs**](docs/DcimApi.md#dcimSitesGraphs) | **GET** /dcim/sites/{id}/graphs/ | 
*NetBoxApi.DcimApi* | [**dcimSitesList**](docs/DcimApi.md#dcimSitesList) | **GET** /dcim/sites/ | 
*NetBoxApi.DcimApi* | [**dcimSitesPartialUpdate**](docs/DcimApi.md#dcimSitesPartialUpdate) | **PATCH** /dcim/sites/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimSitesRead**](docs/DcimApi.md#dcimSitesRead) | **GET** /dcim/sites/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimSitesUpdate**](docs/DcimApi.md#dcimSitesUpdate) | **PUT** /dcim/sites/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimVirtualChassisCreate**](docs/DcimApi.md#dcimVirtualChassisCreate) | **POST** /dcim/virtual-chassis/ | 
*NetBoxApi.DcimApi* | [**dcimVirtualChassisDelete**](docs/DcimApi.md#dcimVirtualChassisDelete) | **DELETE** /dcim/virtual-chassis/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimVirtualChassisList**](docs/DcimApi.md#dcimVirtualChassisList) | **GET** /dcim/virtual-chassis/ | 
*NetBoxApi.DcimApi* | [**dcimVirtualChassisPartialUpdate**](docs/DcimApi.md#dcimVirtualChassisPartialUpdate) | **PATCH** /dcim/virtual-chassis/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimVirtualChassisRead**](docs/DcimApi.md#dcimVirtualChassisRead) | **GET** /dcim/virtual-chassis/{id}/ | 
*NetBoxApi.DcimApi* | [**dcimVirtualChassisUpdate**](docs/DcimApi.md#dcimVirtualChassisUpdate) | **PUT** /dcim/virtual-chassis/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasConfigContextsCreate**](docs/ExtrasApi.md#extrasConfigContextsCreate) | **POST** /extras/config-contexts/ | 
*NetBoxApi.ExtrasApi* | [**extrasConfigContextsDelete**](docs/ExtrasApi.md#extrasConfigContextsDelete) | **DELETE** /extras/config-contexts/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasConfigContextsList**](docs/ExtrasApi.md#extrasConfigContextsList) | **GET** /extras/config-contexts/ | 
*NetBoxApi.ExtrasApi* | [**extrasConfigContextsPartialUpdate**](docs/ExtrasApi.md#extrasConfigContextsPartialUpdate) | **PATCH** /extras/config-contexts/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasConfigContextsRead**](docs/ExtrasApi.md#extrasConfigContextsRead) | **GET** /extras/config-contexts/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasConfigContextsUpdate**](docs/ExtrasApi.md#extrasConfigContextsUpdate) | **PUT** /extras/config-contexts/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasCustomFieldChoicesList**](docs/ExtrasApi.md#extrasCustomFieldChoicesList) | **GET** /extras/_custom_field_choices/ | 
*NetBoxApi.ExtrasApi* | [**extrasCustomFieldChoicesRead**](docs/ExtrasApi.md#extrasCustomFieldChoicesRead) | **GET** /extras/_custom_field_choices/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasExportTemplatesCreate**](docs/ExtrasApi.md#extrasExportTemplatesCreate) | **POST** /extras/export-templates/ | 
*NetBoxApi.ExtrasApi* | [**extrasExportTemplatesDelete**](docs/ExtrasApi.md#extrasExportTemplatesDelete) | **DELETE** /extras/export-templates/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasExportTemplatesList**](docs/ExtrasApi.md#extrasExportTemplatesList) | **GET** /extras/export-templates/ | 
*NetBoxApi.ExtrasApi* | [**extrasExportTemplatesPartialUpdate**](docs/ExtrasApi.md#extrasExportTemplatesPartialUpdate) | **PATCH** /extras/export-templates/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasExportTemplatesRead**](docs/ExtrasApi.md#extrasExportTemplatesRead) | **GET** /extras/export-templates/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasExportTemplatesUpdate**](docs/ExtrasApi.md#extrasExportTemplatesUpdate) | **PUT** /extras/export-templates/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasGraphsCreate**](docs/ExtrasApi.md#extrasGraphsCreate) | **POST** /extras/graphs/ | 
*NetBoxApi.ExtrasApi* | [**extrasGraphsDelete**](docs/ExtrasApi.md#extrasGraphsDelete) | **DELETE** /extras/graphs/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasGraphsList**](docs/ExtrasApi.md#extrasGraphsList) | **GET** /extras/graphs/ | 
*NetBoxApi.ExtrasApi* | [**extrasGraphsPartialUpdate**](docs/ExtrasApi.md#extrasGraphsPartialUpdate) | **PATCH** /extras/graphs/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasGraphsRead**](docs/ExtrasApi.md#extrasGraphsRead) | **GET** /extras/graphs/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasGraphsUpdate**](docs/ExtrasApi.md#extrasGraphsUpdate) | **PUT** /extras/graphs/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasImageAttachmentsCreate**](docs/ExtrasApi.md#extrasImageAttachmentsCreate) | **POST** /extras/image-attachments/ | 
*NetBoxApi.ExtrasApi* | [**extrasImageAttachmentsDelete**](docs/ExtrasApi.md#extrasImageAttachmentsDelete) | **DELETE** /extras/image-attachments/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasImageAttachmentsList**](docs/ExtrasApi.md#extrasImageAttachmentsList) | **GET** /extras/image-attachments/ | 
*NetBoxApi.ExtrasApi* | [**extrasImageAttachmentsPartialUpdate**](docs/ExtrasApi.md#extrasImageAttachmentsPartialUpdate) | **PATCH** /extras/image-attachments/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasImageAttachmentsRead**](docs/ExtrasApi.md#extrasImageAttachmentsRead) | **GET** /extras/image-attachments/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasImageAttachmentsUpdate**](docs/ExtrasApi.md#extrasImageAttachmentsUpdate) | **PUT** /extras/image-attachments/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasObjectChangesList**](docs/ExtrasApi.md#extrasObjectChangesList) | **GET** /extras/object-changes/ | 
*NetBoxApi.ExtrasApi* | [**extrasObjectChangesRead**](docs/ExtrasApi.md#extrasObjectChangesRead) | **GET** /extras/object-changes/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasReportsList**](docs/ExtrasApi.md#extrasReportsList) | **GET** /extras/reports/ | 
*NetBoxApi.ExtrasApi* | [**extrasReportsRead**](docs/ExtrasApi.md#extrasReportsRead) | **GET** /extras/reports/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasReportsRun**](docs/ExtrasApi.md#extrasReportsRun) | **POST** /extras/reports/{id}/run/ | 
*NetBoxApi.ExtrasApi* | [**extrasScriptsList**](docs/ExtrasApi.md#extrasScriptsList) | **GET** /extras/scripts/ | 
*NetBoxApi.ExtrasApi* | [**extrasScriptsRead**](docs/ExtrasApi.md#extrasScriptsRead) | **GET** /extras/scripts/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasTagsCreate**](docs/ExtrasApi.md#extrasTagsCreate) | **POST** /extras/tags/ | 
*NetBoxApi.ExtrasApi* | [**extrasTagsDelete**](docs/ExtrasApi.md#extrasTagsDelete) | **DELETE** /extras/tags/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasTagsList**](docs/ExtrasApi.md#extrasTagsList) | **GET** /extras/tags/ | 
*NetBoxApi.ExtrasApi* | [**extrasTagsPartialUpdate**](docs/ExtrasApi.md#extrasTagsPartialUpdate) | **PATCH** /extras/tags/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasTagsRead**](docs/ExtrasApi.md#extrasTagsRead) | **GET** /extras/tags/{id}/ | 
*NetBoxApi.ExtrasApi* | [**extrasTagsUpdate**](docs/ExtrasApi.md#extrasTagsUpdate) | **PUT** /extras/tags/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamAggregatesCreate**](docs/IpamApi.md#ipamAggregatesCreate) | **POST** /ipam/aggregates/ | 
*NetBoxApi.IpamApi* | [**ipamAggregatesDelete**](docs/IpamApi.md#ipamAggregatesDelete) | **DELETE** /ipam/aggregates/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamAggregatesList**](docs/IpamApi.md#ipamAggregatesList) | **GET** /ipam/aggregates/ | 
*NetBoxApi.IpamApi* | [**ipamAggregatesPartialUpdate**](docs/IpamApi.md#ipamAggregatesPartialUpdate) | **PATCH** /ipam/aggregates/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamAggregatesRead**](docs/IpamApi.md#ipamAggregatesRead) | **GET** /ipam/aggregates/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamAggregatesUpdate**](docs/IpamApi.md#ipamAggregatesUpdate) | **PUT** /ipam/aggregates/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamIpAddressesCreate**](docs/IpamApi.md#ipamIpAddressesCreate) | **POST** /ipam/ip-addresses/ | 
*NetBoxApi.IpamApi* | [**ipamIpAddressesDelete**](docs/IpamApi.md#ipamIpAddressesDelete) | **DELETE** /ipam/ip-addresses/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamIpAddressesList**](docs/IpamApi.md#ipamIpAddressesList) | **GET** /ipam/ip-addresses/ | 
*NetBoxApi.IpamApi* | [**ipamIpAddressesPartialUpdate**](docs/IpamApi.md#ipamIpAddressesPartialUpdate) | **PATCH** /ipam/ip-addresses/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamIpAddressesRead**](docs/IpamApi.md#ipamIpAddressesRead) | **GET** /ipam/ip-addresses/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamIpAddressesUpdate**](docs/IpamApi.md#ipamIpAddressesUpdate) | **PUT** /ipam/ip-addresses/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamPrefixesAvailableIpsCreate**](docs/IpamApi.md#ipamPrefixesAvailableIpsCreate) | **POST** /ipam/prefixes/{id}/available-ips/ | 
*NetBoxApi.IpamApi* | [**ipamPrefixesAvailableIpsRead**](docs/IpamApi.md#ipamPrefixesAvailableIpsRead) | **GET** /ipam/prefixes/{id}/available-ips/ | 
*NetBoxApi.IpamApi* | [**ipamPrefixesAvailablePrefixesCreate**](docs/IpamApi.md#ipamPrefixesAvailablePrefixesCreate) | **POST** /ipam/prefixes/{id}/available-prefixes/ | A convenience method for returning available child prefixes within a parent.
*NetBoxApi.IpamApi* | [**ipamPrefixesAvailablePrefixesRead**](docs/IpamApi.md#ipamPrefixesAvailablePrefixesRead) | **GET** /ipam/prefixes/{id}/available-prefixes/ | A convenience method for returning available child prefixes within a parent.
*NetBoxApi.IpamApi* | [**ipamPrefixesCreate**](docs/IpamApi.md#ipamPrefixesCreate) | **POST** /ipam/prefixes/ | 
*NetBoxApi.IpamApi* | [**ipamPrefixesDelete**](docs/IpamApi.md#ipamPrefixesDelete) | **DELETE** /ipam/prefixes/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamPrefixesList**](docs/IpamApi.md#ipamPrefixesList) | **GET** /ipam/prefixes/ | 
*NetBoxApi.IpamApi* | [**ipamPrefixesPartialUpdate**](docs/IpamApi.md#ipamPrefixesPartialUpdate) | **PATCH** /ipam/prefixes/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamPrefixesRead**](docs/IpamApi.md#ipamPrefixesRead) | **GET** /ipam/prefixes/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamPrefixesUpdate**](docs/IpamApi.md#ipamPrefixesUpdate) | **PUT** /ipam/prefixes/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamRirsCreate**](docs/IpamApi.md#ipamRirsCreate) | **POST** /ipam/rirs/ | 
*NetBoxApi.IpamApi* | [**ipamRirsDelete**](docs/IpamApi.md#ipamRirsDelete) | **DELETE** /ipam/rirs/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamRirsList**](docs/IpamApi.md#ipamRirsList) | **GET** /ipam/rirs/ | 
*NetBoxApi.IpamApi* | [**ipamRirsPartialUpdate**](docs/IpamApi.md#ipamRirsPartialUpdate) | **PATCH** /ipam/rirs/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamRirsRead**](docs/IpamApi.md#ipamRirsRead) | **GET** /ipam/rirs/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamRirsUpdate**](docs/IpamApi.md#ipamRirsUpdate) | **PUT** /ipam/rirs/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamRolesCreate**](docs/IpamApi.md#ipamRolesCreate) | **POST** /ipam/roles/ | 
*NetBoxApi.IpamApi* | [**ipamRolesDelete**](docs/IpamApi.md#ipamRolesDelete) | **DELETE** /ipam/roles/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamRolesList**](docs/IpamApi.md#ipamRolesList) | **GET** /ipam/roles/ | 
*NetBoxApi.IpamApi* | [**ipamRolesPartialUpdate**](docs/IpamApi.md#ipamRolesPartialUpdate) | **PATCH** /ipam/roles/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamRolesRead**](docs/IpamApi.md#ipamRolesRead) | **GET** /ipam/roles/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamRolesUpdate**](docs/IpamApi.md#ipamRolesUpdate) | **PUT** /ipam/roles/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamServicesCreate**](docs/IpamApi.md#ipamServicesCreate) | **POST** /ipam/services/ | 
*NetBoxApi.IpamApi* | [**ipamServicesDelete**](docs/IpamApi.md#ipamServicesDelete) | **DELETE** /ipam/services/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamServicesList**](docs/IpamApi.md#ipamServicesList) | **GET** /ipam/services/ | 
*NetBoxApi.IpamApi* | [**ipamServicesPartialUpdate**](docs/IpamApi.md#ipamServicesPartialUpdate) | **PATCH** /ipam/services/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamServicesRead**](docs/IpamApi.md#ipamServicesRead) | **GET** /ipam/services/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamServicesUpdate**](docs/IpamApi.md#ipamServicesUpdate) | **PUT** /ipam/services/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamVlanGroupsCreate**](docs/IpamApi.md#ipamVlanGroupsCreate) | **POST** /ipam/vlan-groups/ | 
*NetBoxApi.IpamApi* | [**ipamVlanGroupsDelete**](docs/IpamApi.md#ipamVlanGroupsDelete) | **DELETE** /ipam/vlan-groups/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamVlanGroupsList**](docs/IpamApi.md#ipamVlanGroupsList) | **GET** /ipam/vlan-groups/ | 
*NetBoxApi.IpamApi* | [**ipamVlanGroupsPartialUpdate**](docs/IpamApi.md#ipamVlanGroupsPartialUpdate) | **PATCH** /ipam/vlan-groups/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamVlanGroupsRead**](docs/IpamApi.md#ipamVlanGroupsRead) | **GET** /ipam/vlan-groups/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamVlanGroupsUpdate**](docs/IpamApi.md#ipamVlanGroupsUpdate) | **PUT** /ipam/vlan-groups/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamVlansCreate**](docs/IpamApi.md#ipamVlansCreate) | **POST** /ipam/vlans/ | 
*NetBoxApi.IpamApi* | [**ipamVlansDelete**](docs/IpamApi.md#ipamVlansDelete) | **DELETE** /ipam/vlans/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamVlansList**](docs/IpamApi.md#ipamVlansList) | **GET** /ipam/vlans/ | 
*NetBoxApi.IpamApi* | [**ipamVlansPartialUpdate**](docs/IpamApi.md#ipamVlansPartialUpdate) | **PATCH** /ipam/vlans/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamVlansRead**](docs/IpamApi.md#ipamVlansRead) | **GET** /ipam/vlans/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamVlansUpdate**](docs/IpamApi.md#ipamVlansUpdate) | **PUT** /ipam/vlans/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamVrfsCreate**](docs/IpamApi.md#ipamVrfsCreate) | **POST** /ipam/vrfs/ | 
*NetBoxApi.IpamApi* | [**ipamVrfsDelete**](docs/IpamApi.md#ipamVrfsDelete) | **DELETE** /ipam/vrfs/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamVrfsList**](docs/IpamApi.md#ipamVrfsList) | **GET** /ipam/vrfs/ | 
*NetBoxApi.IpamApi* | [**ipamVrfsPartialUpdate**](docs/IpamApi.md#ipamVrfsPartialUpdate) | **PATCH** /ipam/vrfs/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamVrfsRead**](docs/IpamApi.md#ipamVrfsRead) | **GET** /ipam/vrfs/{id}/ | 
*NetBoxApi.IpamApi* | [**ipamVrfsUpdate**](docs/IpamApi.md#ipamVrfsUpdate) | **PUT** /ipam/vrfs/{id}/ | 
*NetBoxApi.SecretsApi* | [**secretsGenerateRsaKeyPairList**](docs/SecretsApi.md#secretsGenerateRsaKeyPairList) | **GET** /secrets/generate-rsa-key-pair/ | This endpoint can be used to generate a new RSA key pair. The keys are returned in PEM format.
*NetBoxApi.SecretsApi* | [**secretsGetSessionKeyCreate**](docs/SecretsApi.md#secretsGetSessionKeyCreate) | **POST** /secrets/get-session-key/ | 
*NetBoxApi.SecretsApi* | [**secretsSecretRolesCreate**](docs/SecretsApi.md#secretsSecretRolesCreate) | **POST** /secrets/secret-roles/ | 
*NetBoxApi.SecretsApi* | [**secretsSecretRolesDelete**](docs/SecretsApi.md#secretsSecretRolesDelete) | **DELETE** /secrets/secret-roles/{id}/ | 
*NetBoxApi.SecretsApi* | [**secretsSecretRolesList**](docs/SecretsApi.md#secretsSecretRolesList) | **GET** /secrets/secret-roles/ | 
*NetBoxApi.SecretsApi* | [**secretsSecretRolesPartialUpdate**](docs/SecretsApi.md#secretsSecretRolesPartialUpdate) | **PATCH** /secrets/secret-roles/{id}/ | 
*NetBoxApi.SecretsApi* | [**secretsSecretRolesRead**](docs/SecretsApi.md#secretsSecretRolesRead) | **GET** /secrets/secret-roles/{id}/ | 
*NetBoxApi.SecretsApi* | [**secretsSecretRolesUpdate**](docs/SecretsApi.md#secretsSecretRolesUpdate) | **PUT** /secrets/secret-roles/{id}/ | 
*NetBoxApi.SecretsApi* | [**secretsSecretsCreate**](docs/SecretsApi.md#secretsSecretsCreate) | **POST** /secrets/secrets/ | 
*NetBoxApi.SecretsApi* | [**secretsSecretsDelete**](docs/SecretsApi.md#secretsSecretsDelete) | **DELETE** /secrets/secrets/{id}/ | 
*NetBoxApi.SecretsApi* | [**secretsSecretsList**](docs/SecretsApi.md#secretsSecretsList) | **GET** /secrets/secrets/ | 
*NetBoxApi.SecretsApi* | [**secretsSecretsPartialUpdate**](docs/SecretsApi.md#secretsSecretsPartialUpdate) | **PATCH** /secrets/secrets/{id}/ | 
*NetBoxApi.SecretsApi* | [**secretsSecretsRead**](docs/SecretsApi.md#secretsSecretsRead) | **GET** /secrets/secrets/{id}/ | 
*NetBoxApi.SecretsApi* | [**secretsSecretsUpdate**](docs/SecretsApi.md#secretsSecretsUpdate) | **PUT** /secrets/secrets/{id}/ | 
*NetBoxApi.TenancyApi* | [**tenancyTenantGroupsCreate**](docs/TenancyApi.md#tenancyTenantGroupsCreate) | **POST** /tenancy/tenant-groups/ | 
*NetBoxApi.TenancyApi* | [**tenancyTenantGroupsDelete**](docs/TenancyApi.md#tenancyTenantGroupsDelete) | **DELETE** /tenancy/tenant-groups/{id}/ | 
*NetBoxApi.TenancyApi* | [**tenancyTenantGroupsList**](docs/TenancyApi.md#tenancyTenantGroupsList) | **GET** /tenancy/tenant-groups/ | 
*NetBoxApi.TenancyApi* | [**tenancyTenantGroupsPartialUpdate**](docs/TenancyApi.md#tenancyTenantGroupsPartialUpdate) | **PATCH** /tenancy/tenant-groups/{id}/ | 
*NetBoxApi.TenancyApi* | [**tenancyTenantGroupsRead**](docs/TenancyApi.md#tenancyTenantGroupsRead) | **GET** /tenancy/tenant-groups/{id}/ | 
*NetBoxApi.TenancyApi* | [**tenancyTenantGroupsUpdate**](docs/TenancyApi.md#tenancyTenantGroupsUpdate) | **PUT** /tenancy/tenant-groups/{id}/ | 
*NetBoxApi.TenancyApi* | [**tenancyTenantsCreate**](docs/TenancyApi.md#tenancyTenantsCreate) | **POST** /tenancy/tenants/ | 
*NetBoxApi.TenancyApi* | [**tenancyTenantsDelete**](docs/TenancyApi.md#tenancyTenantsDelete) | **DELETE** /tenancy/tenants/{id}/ | 
*NetBoxApi.TenancyApi* | [**tenancyTenantsList**](docs/TenancyApi.md#tenancyTenantsList) | **GET** /tenancy/tenants/ | 
*NetBoxApi.TenancyApi* | [**tenancyTenantsPartialUpdate**](docs/TenancyApi.md#tenancyTenantsPartialUpdate) | **PATCH** /tenancy/tenants/{id}/ | 
*NetBoxApi.TenancyApi* | [**tenancyTenantsRead**](docs/TenancyApi.md#tenancyTenantsRead) | **GET** /tenancy/tenants/{id}/ | 
*NetBoxApi.TenancyApi* | [**tenancyTenantsUpdate**](docs/TenancyApi.md#tenancyTenantsUpdate) | **PUT** /tenancy/tenants/{id}/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationClusterGroupsCreate**](docs/VirtualizationApi.md#virtualizationClusterGroupsCreate) | **POST** /virtualization/cluster-groups/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationClusterGroupsDelete**](docs/VirtualizationApi.md#virtualizationClusterGroupsDelete) | **DELETE** /virtualization/cluster-groups/{id}/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationClusterGroupsList**](docs/VirtualizationApi.md#virtualizationClusterGroupsList) | **GET** /virtualization/cluster-groups/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationClusterGroupsPartialUpdate**](docs/VirtualizationApi.md#virtualizationClusterGroupsPartialUpdate) | **PATCH** /virtualization/cluster-groups/{id}/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationClusterGroupsRead**](docs/VirtualizationApi.md#virtualizationClusterGroupsRead) | **GET** /virtualization/cluster-groups/{id}/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationClusterGroupsUpdate**](docs/VirtualizationApi.md#virtualizationClusterGroupsUpdate) | **PUT** /virtualization/cluster-groups/{id}/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationClusterTypesCreate**](docs/VirtualizationApi.md#virtualizationClusterTypesCreate) | **POST** /virtualization/cluster-types/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationClusterTypesDelete**](docs/VirtualizationApi.md#virtualizationClusterTypesDelete) | **DELETE** /virtualization/cluster-types/{id}/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationClusterTypesList**](docs/VirtualizationApi.md#virtualizationClusterTypesList) | **GET** /virtualization/cluster-types/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationClusterTypesPartialUpdate**](docs/VirtualizationApi.md#virtualizationClusterTypesPartialUpdate) | **PATCH** /virtualization/cluster-types/{id}/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationClusterTypesRead**](docs/VirtualizationApi.md#virtualizationClusterTypesRead) | **GET** /virtualization/cluster-types/{id}/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationClusterTypesUpdate**](docs/VirtualizationApi.md#virtualizationClusterTypesUpdate) | **PUT** /virtualization/cluster-types/{id}/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationClustersCreate**](docs/VirtualizationApi.md#virtualizationClustersCreate) | **POST** /virtualization/clusters/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationClustersDelete**](docs/VirtualizationApi.md#virtualizationClustersDelete) | **DELETE** /virtualization/clusters/{id}/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationClustersList**](docs/VirtualizationApi.md#virtualizationClustersList) | **GET** /virtualization/clusters/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationClustersPartialUpdate**](docs/VirtualizationApi.md#virtualizationClustersPartialUpdate) | **PATCH** /virtualization/clusters/{id}/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationClustersRead**](docs/VirtualizationApi.md#virtualizationClustersRead) | **GET** /virtualization/clusters/{id}/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationClustersUpdate**](docs/VirtualizationApi.md#virtualizationClustersUpdate) | **PUT** /virtualization/clusters/{id}/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationInterfacesCreate**](docs/VirtualizationApi.md#virtualizationInterfacesCreate) | **POST** /virtualization/interfaces/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationInterfacesDelete**](docs/VirtualizationApi.md#virtualizationInterfacesDelete) | **DELETE** /virtualization/interfaces/{id}/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationInterfacesList**](docs/VirtualizationApi.md#virtualizationInterfacesList) | **GET** /virtualization/interfaces/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationInterfacesPartialUpdate**](docs/VirtualizationApi.md#virtualizationInterfacesPartialUpdate) | **PATCH** /virtualization/interfaces/{id}/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationInterfacesRead**](docs/VirtualizationApi.md#virtualizationInterfacesRead) | **GET** /virtualization/interfaces/{id}/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationInterfacesUpdate**](docs/VirtualizationApi.md#virtualizationInterfacesUpdate) | **PUT** /virtualization/interfaces/{id}/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationVirtualMachinesCreate**](docs/VirtualizationApi.md#virtualizationVirtualMachinesCreate) | **POST** /virtualization/virtual-machines/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationVirtualMachinesDelete**](docs/VirtualizationApi.md#virtualizationVirtualMachinesDelete) | **DELETE** /virtualization/virtual-machines/{id}/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationVirtualMachinesList**](docs/VirtualizationApi.md#virtualizationVirtualMachinesList) | **GET** /virtualization/virtual-machines/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationVirtualMachinesPartialUpdate**](docs/VirtualizationApi.md#virtualizationVirtualMachinesPartialUpdate) | **PATCH** /virtualization/virtual-machines/{id}/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationVirtualMachinesRead**](docs/VirtualizationApi.md#virtualizationVirtualMachinesRead) | **GET** /virtualization/virtual-machines/{id}/ | 
*NetBoxApi.VirtualizationApi* | [**virtualizationVirtualMachinesUpdate**](docs/VirtualizationApi.md#virtualizationVirtualMachinesUpdate) | **PUT** /virtualization/virtual-machines/{id}/ | 


## Documentation for Models

 - [NetBoxApi.Action](docs/Action.md)
 - [NetBoxApi.Aggregate](docs/Aggregate.md)
 - [NetBoxApi.AvailableIP](docs/AvailableIP.md)
 - [NetBoxApi.AvailablePrefix](docs/AvailablePrefix.md)
 - [NetBoxApi.Cable](docs/Cable.md)
 - [NetBoxApi.Circuit](docs/Circuit.md)
 - [NetBoxApi.CircuitCircuitTermination](docs/CircuitCircuitTermination.md)
 - [NetBoxApi.CircuitTermination](docs/CircuitTermination.md)
 - [NetBoxApi.CircuitType](docs/CircuitType.md)
 - [NetBoxApi.CircuitsCircuitTerminationsList200Response](docs/CircuitsCircuitTerminationsList200Response.md)
 - [NetBoxApi.CircuitsCircuitTypesList200Response](docs/CircuitsCircuitTypesList200Response.md)
 - [NetBoxApi.CircuitsCircuitsList200Response](docs/CircuitsCircuitsList200Response.md)
 - [NetBoxApi.CircuitsProvidersList200Response](docs/CircuitsProvidersList200Response.md)
 - [NetBoxApi.Cluster](docs/Cluster.md)
 - [NetBoxApi.ClusterGroup](docs/ClusterGroup.md)
 - [NetBoxApi.ClusterType](docs/ClusterType.md)
 - [NetBoxApi.ConfigContext](docs/ConfigContext.md)
 - [NetBoxApi.ConnectionStatus](docs/ConnectionStatus.md)
 - [NetBoxApi.ConnectionStatus1](docs/ConnectionStatus1.md)
 - [NetBoxApi.ConsolePort](docs/ConsolePort.md)
 - [NetBoxApi.ConsolePortTemplate](docs/ConsolePortTemplate.md)
 - [NetBoxApi.ConsoleServerPort](docs/ConsoleServerPort.md)
 - [NetBoxApi.ConsoleServerPortTemplate](docs/ConsoleServerPortTemplate.md)
 - [NetBoxApi.DcimCablesList200Response](docs/DcimCablesList200Response.md)
 - [NetBoxApi.DcimConsoleConnectionsList200Response](docs/DcimConsoleConnectionsList200Response.md)
 - [NetBoxApi.DcimConsolePortTemplatesList200Response](docs/DcimConsolePortTemplatesList200Response.md)
 - [NetBoxApi.DcimConsoleServerPortTemplatesList200Response](docs/DcimConsoleServerPortTemplatesList200Response.md)
 - [NetBoxApi.DcimConsoleServerPortsList200Response](docs/DcimConsoleServerPortsList200Response.md)
 - [NetBoxApi.DcimDeviceBayTemplatesList200Response](docs/DcimDeviceBayTemplatesList200Response.md)
 - [NetBoxApi.DcimDeviceBaysList200Response](docs/DcimDeviceBaysList200Response.md)
 - [NetBoxApi.DcimDeviceRolesList200Response](docs/DcimDeviceRolesList200Response.md)
 - [NetBoxApi.DcimDeviceTypesList200Response](docs/DcimDeviceTypesList200Response.md)
 - [NetBoxApi.DcimDevicesList200Response](docs/DcimDevicesList200Response.md)
 - [NetBoxApi.DcimFrontPortTemplatesList200Response](docs/DcimFrontPortTemplatesList200Response.md)
 - [NetBoxApi.DcimFrontPortsList200Response](docs/DcimFrontPortsList200Response.md)
 - [NetBoxApi.DcimInterfaceConnectionsList200Response](docs/DcimInterfaceConnectionsList200Response.md)
 - [NetBoxApi.DcimInterfaceTemplatesList200Response](docs/DcimInterfaceTemplatesList200Response.md)
 - [NetBoxApi.DcimInterfacesList200Response](docs/DcimInterfacesList200Response.md)
 - [NetBoxApi.DcimInventoryItemsList200Response](docs/DcimInventoryItemsList200Response.md)
 - [NetBoxApi.DcimManufacturersList200Response](docs/DcimManufacturersList200Response.md)
 - [NetBoxApi.DcimPlatformsList200Response](docs/DcimPlatformsList200Response.md)
 - [NetBoxApi.DcimPowerConnectionsList200Response](docs/DcimPowerConnectionsList200Response.md)
 - [NetBoxApi.DcimPowerFeedsList200Response](docs/DcimPowerFeedsList200Response.md)
 - [NetBoxApi.DcimPowerOutletTemplatesList200Response](docs/DcimPowerOutletTemplatesList200Response.md)
 - [NetBoxApi.DcimPowerOutletsList200Response](docs/DcimPowerOutletsList200Response.md)
 - [NetBoxApi.DcimPowerPanelsList200Response](docs/DcimPowerPanelsList200Response.md)
 - [NetBoxApi.DcimPowerPortTemplatesList200Response](docs/DcimPowerPortTemplatesList200Response.md)
 - [NetBoxApi.DcimRackGroupsList200Response](docs/DcimRackGroupsList200Response.md)
 - [NetBoxApi.DcimRackReservationsList200Response](docs/DcimRackReservationsList200Response.md)
 - [NetBoxApi.DcimRackRolesList200Response](docs/DcimRackRolesList200Response.md)
 - [NetBoxApi.DcimRacksList200Response](docs/DcimRacksList200Response.md)
 - [NetBoxApi.DcimRearPortTemplatesList200Response](docs/DcimRearPortTemplatesList200Response.md)
 - [NetBoxApi.DcimRearPortsList200Response](docs/DcimRearPortsList200Response.md)
 - [NetBoxApi.DcimRegionsList200Response](docs/DcimRegionsList200Response.md)
 - [NetBoxApi.DcimSitesList200Response](docs/DcimSitesList200Response.md)
 - [NetBoxApi.DcimVirtualChassisList200Response](docs/DcimVirtualChassisList200Response.md)
 - [NetBoxApi.Device](docs/Device.md)
 - [NetBoxApi.DeviceBay](docs/DeviceBay.md)
 - [NetBoxApi.DeviceBayTemplate](docs/DeviceBayTemplate.md)
 - [NetBoxApi.DeviceInterface](docs/DeviceInterface.md)
 - [NetBoxApi.DeviceNAPALM](docs/DeviceNAPALM.md)
 - [NetBoxApi.DeviceRole](docs/DeviceRole.md)
 - [NetBoxApi.DeviceType](docs/DeviceType.md)
 - [NetBoxApi.DeviceWithConfigContext](docs/DeviceWithConfigContext.md)
 - [NetBoxApi.ExportTemplate](docs/ExportTemplate.md)
 - [NetBoxApi.ExtrasConfigContextsList200Response](docs/ExtrasConfigContextsList200Response.md)
 - [NetBoxApi.ExtrasExportTemplatesList200Response](docs/ExtrasExportTemplatesList200Response.md)
 - [NetBoxApi.ExtrasGraphsList200Response](docs/ExtrasGraphsList200Response.md)
 - [NetBoxApi.ExtrasImageAttachmentsList200Response](docs/ExtrasImageAttachmentsList200Response.md)
 - [NetBoxApi.ExtrasObjectChangesList200Response](docs/ExtrasObjectChangesList200Response.md)
 - [NetBoxApi.ExtrasTagsList200Response](docs/ExtrasTagsList200Response.md)
 - [NetBoxApi.Face](docs/Face.md)
 - [NetBoxApi.Face1](docs/Face1.md)
 - [NetBoxApi.Family](docs/Family.md)
 - [NetBoxApi.FeedLeg](docs/FeedLeg.md)
 - [NetBoxApi.FrontPort](docs/FrontPort.md)
 - [NetBoxApi.FrontPortRearPort](docs/FrontPortRearPort.md)
 - [NetBoxApi.FrontPortTemplate](docs/FrontPortTemplate.md)
 - [NetBoxApi.Graph](docs/Graph.md)
 - [NetBoxApi.IPAddress](docs/IPAddress.md)
 - [NetBoxApi.IPAddressInterface](docs/IPAddressInterface.md)
 - [NetBoxApi.ImageAttachment](docs/ImageAttachment.md)
 - [NetBoxApi.InterfaceConnection](docs/InterfaceConnection.md)
 - [NetBoxApi.InterfaceTemplate](docs/InterfaceTemplate.md)
 - [NetBoxApi.InventoryItem](docs/InventoryItem.md)
 - [NetBoxApi.IpamAggregatesList200Response](docs/IpamAggregatesList200Response.md)
 - [NetBoxApi.IpamIpAddressesList200Response](docs/IpamIpAddressesList200Response.md)
 - [NetBoxApi.IpamPrefixesList200Response](docs/IpamPrefixesList200Response.md)
 - [NetBoxApi.IpamRirsList200Response](docs/IpamRirsList200Response.md)
 - [NetBoxApi.IpamRolesList200Response](docs/IpamRolesList200Response.md)
 - [NetBoxApi.IpamServicesList200Response](docs/IpamServicesList200Response.md)
 - [NetBoxApi.IpamVlanGroupsList200Response](docs/IpamVlanGroupsList200Response.md)
 - [NetBoxApi.IpamVlansList200Response](docs/IpamVlansList200Response.md)
 - [NetBoxApi.IpamVrfsList200Response](docs/IpamVrfsList200Response.md)
 - [NetBoxApi.LengthUnit](docs/LengthUnit.md)
 - [NetBoxApi.Manufacturer](docs/Manufacturer.md)
 - [NetBoxApi.Mode](docs/Mode.md)
 - [NetBoxApi.NestedCable](docs/NestedCable.md)
 - [NetBoxApi.NestedCircuit](docs/NestedCircuit.md)
 - [NetBoxApi.NestedCircuitType](docs/NestedCircuitType.md)
 - [NetBoxApi.NestedCluster](docs/NestedCluster.md)
 - [NetBoxApi.NestedClusterGroup](docs/NestedClusterGroup.md)
 - [NetBoxApi.NestedClusterType](docs/NestedClusterType.md)
 - [NetBoxApi.NestedDevice](docs/NestedDevice.md)
 - [NetBoxApi.NestedDeviceRole](docs/NestedDeviceRole.md)
 - [NetBoxApi.NestedDeviceType](docs/NestedDeviceType.md)
 - [NetBoxApi.NestedIPAddress](docs/NestedIPAddress.md)
 - [NetBoxApi.NestedInterface](docs/NestedInterface.md)
 - [NetBoxApi.NestedManufacturer](docs/NestedManufacturer.md)
 - [NetBoxApi.NestedPlatform](docs/NestedPlatform.md)
 - [NetBoxApi.NestedPowerPanel](docs/NestedPowerPanel.md)
 - [NetBoxApi.NestedPowerPort](docs/NestedPowerPort.md)
 - [NetBoxApi.NestedPowerPortTemplate](docs/NestedPowerPortTemplate.md)
 - [NetBoxApi.NestedProvider](docs/NestedProvider.md)
 - [NetBoxApi.NestedRIR](docs/NestedRIR.md)
 - [NetBoxApi.NestedRack](docs/NestedRack.md)
 - [NetBoxApi.NestedRackGroup](docs/NestedRackGroup.md)
 - [NetBoxApi.NestedRackRole](docs/NestedRackRole.md)
 - [NetBoxApi.NestedRearPortTemplate](docs/NestedRearPortTemplate.md)
 - [NetBoxApi.NestedRegion](docs/NestedRegion.md)
 - [NetBoxApi.NestedRole](docs/NestedRole.md)
 - [NetBoxApi.NestedSecretRole](docs/NestedSecretRole.md)
 - [NetBoxApi.NestedSite](docs/NestedSite.md)
 - [NetBoxApi.NestedTenant](docs/NestedTenant.md)
 - [NetBoxApi.NestedTenantGroup](docs/NestedTenantGroup.md)
 - [NetBoxApi.NestedUser](docs/NestedUser.md)
 - [NetBoxApi.NestedVLAN](docs/NestedVLAN.md)
 - [NetBoxApi.NestedVLANGroup](docs/NestedVLANGroup.md)
 - [NetBoxApi.NestedVRF](docs/NestedVRF.md)
 - [NetBoxApi.NestedVirtualChassis](docs/NestedVirtualChassis.md)
 - [NetBoxApi.NestedVirtualMachine](docs/NestedVirtualMachine.md)
 - [NetBoxApi.ObjectChange](docs/ObjectChange.md)
 - [NetBoxApi.OuterUnit](docs/OuterUnit.md)
 - [NetBoxApi.Phase](docs/Phase.md)
 - [NetBoxApi.Platform](docs/Platform.md)
 - [NetBoxApi.PowerFeed](docs/PowerFeed.md)
 - [NetBoxApi.PowerOutlet](docs/PowerOutlet.md)
 - [NetBoxApi.PowerOutletTemplate](docs/PowerOutletTemplate.md)
 - [NetBoxApi.PowerPanel](docs/PowerPanel.md)
 - [NetBoxApi.PowerPort](docs/PowerPort.md)
 - [NetBoxApi.PowerPortTemplate](docs/PowerPortTemplate.md)
 - [NetBoxApi.Prefix](docs/Prefix.md)
 - [NetBoxApi.Protocol](docs/Protocol.md)
 - [NetBoxApi.Provider](docs/Provider.md)
 - [NetBoxApi.RIR](docs/RIR.md)
 - [NetBoxApi.Rack](docs/Rack.md)
 - [NetBoxApi.RackGroup](docs/RackGroup.md)
 - [NetBoxApi.RackReservation](docs/RackReservation.md)
 - [NetBoxApi.RackRole](docs/RackRole.md)
 - [NetBoxApi.RackUnit](docs/RackUnit.md)
 - [NetBoxApi.RearPort](docs/RearPort.md)
 - [NetBoxApi.RearPortTemplate](docs/RearPortTemplate.md)
 - [NetBoxApi.Region](docs/Region.md)
 - [NetBoxApi.Role](docs/Role.md)
 - [NetBoxApi.Role1](docs/Role1.md)
 - [NetBoxApi.Secret](docs/Secret.md)
 - [NetBoxApi.SecretRole](docs/SecretRole.md)
 - [NetBoxApi.SecretsSecretRolesList200Response](docs/SecretsSecretRolesList200Response.md)
 - [NetBoxApi.SecretsSecretsList200Response](docs/SecretsSecretsList200Response.md)
 - [NetBoxApi.Service](docs/Service.md)
 - [NetBoxApi.Site](docs/Site.md)
 - [NetBoxApi.Status](docs/Status.md)
 - [NetBoxApi.Status1](docs/Status1.md)
 - [NetBoxApi.Status2](docs/Status2.md)
 - [NetBoxApi.Status3](docs/Status3.md)
 - [NetBoxApi.Status4](docs/Status4.md)
 - [NetBoxApi.Status5](docs/Status5.md)
 - [NetBoxApi.Status6](docs/Status6.md)
 - [NetBoxApi.Status7](docs/Status7.md)
 - [NetBoxApi.Status8](docs/Status8.md)
 - [NetBoxApi.Status9](docs/Status9.md)
 - [NetBoxApi.SubdeviceRole](docs/SubdeviceRole.md)
 - [NetBoxApi.Supply](docs/Supply.md)
 - [NetBoxApi.Tag](docs/Tag.md)
 - [NetBoxApi.TemplateLanguage](docs/TemplateLanguage.md)
 - [NetBoxApi.TenancyTenantGroupsList200Response](docs/TenancyTenantGroupsList200Response.md)
 - [NetBoxApi.TenancyTenantsList200Response](docs/TenancyTenantsList200Response.md)
 - [NetBoxApi.Tenant](docs/Tenant.md)
 - [NetBoxApi.TenantGroup](docs/TenantGroup.md)
 - [NetBoxApi.Type](docs/Type.md)
 - [NetBoxApi.Type1](docs/Type1.md)
 - [NetBoxApi.Type2](docs/Type2.md)
 - [NetBoxApi.Type3](docs/Type3.md)
 - [NetBoxApi.Type4](docs/Type4.md)
 - [NetBoxApi.Type5](docs/Type5.md)
 - [NetBoxApi.Type6](docs/Type6.md)
 - [NetBoxApi.Type7](docs/Type7.md)
 - [NetBoxApi.VLAN](docs/VLAN.md)
 - [NetBoxApi.VLANGroup](docs/VLANGroup.md)
 - [NetBoxApi.VRF](docs/VRF.md)
 - [NetBoxApi.VirtualChassis](docs/VirtualChassis.md)
 - [NetBoxApi.VirtualMachineInterface](docs/VirtualMachineInterface.md)
 - [NetBoxApi.VirtualMachineWithConfigContext](docs/VirtualMachineWithConfigContext.md)
 - [NetBoxApi.VirtualizationClusterGroupsList200Response](docs/VirtualizationClusterGroupsList200Response.md)
 - [NetBoxApi.VirtualizationClusterTypesList200Response](docs/VirtualizationClusterTypesList200Response.md)
 - [NetBoxApi.VirtualizationClustersList200Response](docs/VirtualizationClustersList200Response.md)
 - [NetBoxApi.VirtualizationInterfacesList200Response](docs/VirtualizationInterfacesList200Response.md)
 - [NetBoxApi.VirtualizationVirtualMachinesList200Response](docs/VirtualizationVirtualMachinesList200Response.md)
 - [NetBoxApi.Width](docs/Width.md)
 - [NetBoxApi.WritableAggregate](docs/WritableAggregate.md)
 - [NetBoxApi.WritableAvailableIP](docs/WritableAvailableIP.md)
 - [NetBoxApi.WritableCable](docs/WritableCable.md)
 - [NetBoxApi.WritableCircuit](docs/WritableCircuit.md)
 - [NetBoxApi.WritableCircuitTermination](docs/WritableCircuitTermination.md)
 - [NetBoxApi.WritableCluster](docs/WritableCluster.md)
 - [NetBoxApi.WritableConfigContext](docs/WritableConfigContext.md)
 - [NetBoxApi.WritableConsolePort](docs/WritableConsolePort.md)
 - [NetBoxApi.WritableConsolePortTemplate](docs/WritableConsolePortTemplate.md)
 - [NetBoxApi.WritableConsoleServerPort](docs/WritableConsoleServerPort.md)
 - [NetBoxApi.WritableConsoleServerPortTemplate](docs/WritableConsoleServerPortTemplate.md)
 - [NetBoxApi.WritableDeviceBay](docs/WritableDeviceBay.md)
 - [NetBoxApi.WritableDeviceBayTemplate](docs/WritableDeviceBayTemplate.md)
 - [NetBoxApi.WritableDeviceInterface](docs/WritableDeviceInterface.md)
 - [NetBoxApi.WritableDeviceType](docs/WritableDeviceType.md)
 - [NetBoxApi.WritableDeviceWithConfigContext](docs/WritableDeviceWithConfigContext.md)
 - [NetBoxApi.WritableExportTemplate](docs/WritableExportTemplate.md)
 - [NetBoxApi.WritableFrontPort](docs/WritableFrontPort.md)
 - [NetBoxApi.WritableFrontPortTemplate](docs/WritableFrontPortTemplate.md)
 - [NetBoxApi.WritableIPAddress](docs/WritableIPAddress.md)
 - [NetBoxApi.WritableInterfaceTemplate](docs/WritableInterfaceTemplate.md)
 - [NetBoxApi.WritableInventoryItem](docs/WritableInventoryItem.md)
 - [NetBoxApi.WritablePlatform](docs/WritablePlatform.md)
 - [NetBoxApi.WritablePowerFeed](docs/WritablePowerFeed.md)
 - [NetBoxApi.WritablePowerOutlet](docs/WritablePowerOutlet.md)
 - [NetBoxApi.WritablePowerOutletTemplate](docs/WritablePowerOutletTemplate.md)
 - [NetBoxApi.WritablePowerPanel](docs/WritablePowerPanel.md)
 - [NetBoxApi.WritablePowerPort](docs/WritablePowerPort.md)
 - [NetBoxApi.WritablePowerPortTemplate](docs/WritablePowerPortTemplate.md)
 - [NetBoxApi.WritablePrefix](docs/WritablePrefix.md)
 - [NetBoxApi.WritableRack](docs/WritableRack.md)
 - [NetBoxApi.WritableRackGroup](docs/WritableRackGroup.md)
 - [NetBoxApi.WritableRackReservation](docs/WritableRackReservation.md)
 - [NetBoxApi.WritableRearPort](docs/WritableRearPort.md)
 - [NetBoxApi.WritableRearPortTemplate](docs/WritableRearPortTemplate.md)
 - [NetBoxApi.WritableRegion](docs/WritableRegion.md)
 - [NetBoxApi.WritableSecret](docs/WritableSecret.md)
 - [NetBoxApi.WritableService](docs/WritableService.md)
 - [NetBoxApi.WritableSite](docs/WritableSite.md)
 - [NetBoxApi.WritableTenant](docs/WritableTenant.md)
 - [NetBoxApi.WritableTenantGroup](docs/WritableTenantGroup.md)
 - [NetBoxApi.WritableVLAN](docs/WritableVLAN.md)
 - [NetBoxApi.WritableVLANGroup](docs/WritableVLANGroup.md)
 - [NetBoxApi.WritableVRF](docs/WritableVRF.md)
 - [NetBoxApi.WritableVirtualChassis](docs/WritableVirtualChassis.md)
 - [NetBoxApi.WritableVirtualMachineInterface](docs/WritableVirtualMachineInterface.md)
 - [NetBoxApi.WritableVirtualMachineWithConfigContext](docs/WritableVirtualMachineWithConfigContext.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### Bearer


- **Type**: API key
- **API key parameter name**: Authorization
- **Location**: HTTP header

